# AgroSoft

./: .env.example  .gitignore  .renderignore  Procfile  README_RECUPERACION.md  base.env  build.sh  manage.py  pyproject.toml  render-build.sh  render.yaml  requirements.txt  setup.py  start.sh
agrosoft/agrosoft/: asgi.py  settings.py  urls.py  wsgi.py
agrosoft/productores/: admin.py  apps.py  models.py  views.py
produccion/: email_config.py  settings.py  urls.py
staticfiles/: style.css
templates/: recomendaciones.html
usuarios/: forms.py  models.py  productos_sabana_occidente.py  urls.py  views.py
usuarios/migrations/: 0001_initial.py  0002_rename_municipio_solicitudrecomendacion_cultivo_deseado_and_more.py  0002_solicitudrecomendacion.py  0003_solicitudrecomendacion_fecha_cosecha_and_more.py  0003_solicitudrecomendacion_municipio.py  0004_remove_solicitudrecomendacion_mes_cultivo_and_more.py  0005_solicitudrecomendacion_ingreso_proyectado_and_more.py  0006_auto_20250818_0004.py  0006_usuario_reset_token_usuario_reset_token_expires.py  0007_rename_cultivo_deseado_solicitudrecomendacion_municipio_and_more.py  0008_merge_20250821_0745.py
usuarios/static/: style.css
usuarios/templates/: admin_dashboard.html  base_admin.html  cambiar_contrasena.html  email_recuperacion.html  exito.html  gestionar_usuarios.html  home.html  login.html  produccion_proyectada.html  productos.html  recomendacion.html  recomendacion_resultado.html  recuperar_contrasena.html  registro.html  reporte_cultivos.html  reportes_graficos.html
(+2 files in other folders)
