[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agrosoft"
version = "0.1.0"
description = "Sistema de producción agrícola"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "5.2"
django-cors-headers = "4.3.1"
django-debug-toolbar = "4.3.0"
django-extensions = "3.2.3"
Werkzeug = "3.0.1"
gunicorn = "22.0.0"
whitenoise = "6.7.0"
dj-database-url = "2.1.0"
psycopg2 = "2.9.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
